Fix Contrast Issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
   --secondary-color: #219EBC; /* blue green */
   --accent1-color: #FB8500; /* ut orange */
   --accent2-color: #FFB703; /* selective yellow */
-  --accent2-color-hover: #d26500; /* slightly darker orange */
+  --accent2-color-hover: #D26500; /* slightly darker orange */
   --heading-font: "Raleway", sans-serif;
   --body-font: "Open Sans", sans-serif;
 }
@@ -25,7 +25,7 @@ body {
 h1, h2, h3, h4, h5, h6 { 
   font-family: var(--heading-font);
   font-weight: 700;
-  color: var(--accent1-color);
+  color: var(--primary-color);
 }
 
 header, main, footer {
@@ -153,7 +153,7 @@ section h2 {
   font-size: 2em;
   font-weight: 700;
   line-height: 1.5em;
-  color: var(--accent1-color);
+  color: var(--primary-color);
   text-align: center;
 }
 
@@ -165,7 +165,6 @@ section h2 {
 #history h2 {
   font-size: 2em;
   margin-bottom: 1.5rem;
-  color: var(--accent1-color);
 }
 
 .history-grid {
@@ -208,14 +207,14 @@ section h2 {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 100%; /* Forces each item to the same height inside the grid */
+  height: 100%; 
   margin: 0;
 }
 
 #adventure img {
   width: 100%;
   max-width: 150px;
-  aspect-ratio: 1 / 1; /* Keeps square-ish images */
+  aspect-ratio: 1 / 1; 
   object-fit: cover;
   border-radius: 6px;
 }
